--- a/wiki/FlashUpdate9_0_124_0.wiki
+++ b/wiki/FlashUpdate9_0_124_0.wiki
@@ -35,7 +35,7 @@ end
 
 == Tried some times using this code and i found: ==
  * *d3 can not equal d1 (9,0,115,0 or older version can equal these)*
- * d1 and d2 seems contain uptime in first 4byte (I guess the other bytes are generate this value)
+ * d1 and d2 seems contain uptime in first 4byte (I guess the other bytes are generated using this uptime value)
  * d3 seems simply random ;)
 
 == References ==
